--- a/manifest.yml
+++ b/manifest.yml
@@ -1,4 +1,3 @@
 applications:
 - name: mason-helloworld
-  framework:
-    name: perl
+  buildpack: https://github.com/ActiveState/stackato-buildpack-perl.git
